Fix spacing, width on grid items.

--- a/src/sass/components/_schedule.scss
+++ b/src/sass/components/_schedule.scss
@@ -18,7 +18,6 @@
   clear: both;
   display: grid;
   grid-template-columns: repeat(2, 50%);
-  grid-gap: 0 25px;
   &:last-child {
     border-bottom: 1px solid $gray-light;
   }
@@ -35,13 +34,14 @@
 .schedule__speaker {
   margin-top: 0;
   margin-bottom: .5em;
-  width: 100%;
-  float: left;
   height: 100%;
   display: flex;
   align-items: center;
+  &:nth-of-type(odd) {
+    padding-left: rhythm(.25);
+  }
   &:nth-of-type(even) {
-    clear: both;
+    padding-right: rhythm(.25);
   }
   & div {
     vertical-align: middle;
@@ -111,14 +111,12 @@
 
   .schedule__speaker {
     width: 100%;
-    float: none;
     grid-column-end: span 1;
     &:nth-of-type(odd) {
-      margin-right:0;
-      margin-left: unset;
+      padding-left: unset;
     }
     &:nth-of-type(even) {
-      margin-left:0;
+      padding-right: unset;
     }
   }
   .schedule__speaker__name {
